--- a/package.json
+++ b/package.json
@@ -19,10 +19,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
-    "styled-components": "^5.3.10",
+    "styled-components": "^6.0.0-rc.1",
     "typescript": "5.0.4"
-  },
-  "devDependencies": {
-    "@types/styled-components": "^5.1.26"
   }
 }
